[gd_scene load_steps=23 format=2]

[ext_resource path="res://skills/SkillButton.gd" type="Script" id=1]
[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Roboto-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://skills/nolos.png" type="Texture" id=4]
[ext_resource path="res://skills/los.png" type="Texture" id=5]
[ext_resource path="res://skills/line.png" type="Texture" id=6]
[ext_resource path="res://skills/cooldownIcon.png" type="Texture" id=7]
[ext_resource path="res://areas/ui/apIcon.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.207843, 0.498039, 0.227451, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.145098, 0.145098, 0.12549, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=19]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.576471, 0.168627, 0.168627, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.145098, 0.145098, 0.12549, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.298039, 0.298039, 0.298039, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.145098, 0.145098, 0.12549, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.494118, 0.470588, 0.12549, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.145098, 0.145098, 0.12549, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.262745, 0.262745, 0.262745, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.145098, 0.145098, 0.12549, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=21]
size = 11
outline_color = Color( 0.145098, 0.145098, 0.12549, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 12
outline_color = Color( 0.145098, 0.145098, 0.12549, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.14902, 0.14902, 0.14902, 0.843137 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=5]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=15]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=16]
size = 14
outline_color = Color( 0.117647, 0.101961, 0.101961, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=14]
outline_size = 3
outline_color = Color( 0.117647, 0.101961, 0.101961, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=13]
resource_name = "press"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ 0.0, 12.0 ]
}

[node name="SkillButton" type="Panel"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = -1.0
margin_right = 181.0
margin_bottom = 24.0
rect_min_size = Vector2( 180, 25 )
script = ExtResource( 1 )

[node name="SpellNodes" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="pos" type="Panel" parent="SpellNodes"]
visible = false
margin_right = 175.0
margin_bottom = 25.0
mouse_filter = 2
custom_styles/panel = SubResource( 18 )

[node name="neg" type="Panel" parent="SpellNodes"]
visible = false
margin_right = 175.0
margin_bottom = 25.0
mouse_filter = 2
custom_styles/panel = SubResource( 19 )

[node name="misc" type="Panel" parent="SpellNodes"]
visible = false
margin_right = 175.0
margin_bottom = 25.0
mouse_filter = 2
custom_styles/panel = SubResource( 20 )

[node name="spec" type="Panel" parent="SpellNodes"]
visible = false
margin_right = 175.0
margin_bottom = 25.0
mouse_filter = 2
custom_styles/panel = SubResource( 22 )

[node name="Icon1" type="Sprite" parent="SpellNodes"]
position = Vector2( 21, 12.8 )
scale = Vector2( 0.7, 0.7 )

[node name="Icon2" type="Sprite" parent="SpellNodes/Icon1"]
show_behind_parent = true
position = Vector2( 16.8571, 9.53674e-07 )
scale = Vector2( 0.9, 0.9 )

[node name="shortcut" type="Panel" parent="SpellNodes"]
margin_left = -2.0
margin_top = -2.0
margin_right = 12.0
margin_bottom = 11.0
mouse_filter = 2
custom_styles/panel = SubResource( 17 )
__meta__ = {
"_edit_group_": true
}

[node name="txt" type="RichTextLabel" parent="SpellNodes/shortcut"]
margin_left = -3.0
margin_top = -1.0
margin_right = 17.0
margin_bottom = 15.0
rect_clip_content = false
mouse_filter = 2
custom_fonts/normal_font = SubResource( 21 )
bbcode_enabled = true
bbcode_text = "[center]"

[node name="RichTextLabel" type="RichTextLabel" parent="SpellNodes"]
margin_left = 41.0
margin_top = 5.0
margin_right = 196.0
margin_bottom = 32.0
rect_clip_content = false
mouse_filter = 2
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "Name"
text = "Name"

[node name="Preview" type="Panel" parent="SpellNodes"]
visible = false
margin_left = 205.0
margin_top = 1.0
margin_right = 414.0
margin_bottom = 92.0
mouse_filter = 2
custom_styles/panel = SubResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="SpellNodes/Preview"]
margin_left = 5.0
margin_top = 5.0
margin_right = 203.0
margin_bottom = 91.0
size_flags_horizontal = 13
size_flags_vertical = 13

[node name="HBoxContainer" type="HBoxContainer" parent="SpellNodes/Preview/VBoxContainer"]
margin_right = 198.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )

[node name="SpellName" type="RichTextLabel" parent="SpellNodes/Preview/VBoxContainer/HBoxContainer"]
margin_right = 160.0
margin_bottom = 15.0
rect_min_size = Vector2( 160, 15 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 4 )
text = "Name"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AP" type="RichTextLabel" parent="SpellNodes/Preview/VBoxContainer/HBoxContainer"]
margin_left = 164.0
margin_right = 194.0
margin_bottom = 15.0
rect_min_size = Vector2( 30, 0 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "2 AP"
text = "2 AP"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="SpellNodes/Preview/VBoxContainer"]
margin_top = 19.0
margin_right = 198.0
margin_bottom = 23.0

[node name="Range" type="RichTextLabel" parent="SpellNodes/Preview/VBoxContainer"]
margin_top = 27.0
margin_right = 198.0
margin_bottom = 38.0
rect_min_size = Vector2( 150, 11 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "0 - 4 Range"
text = "0 - 4 Range"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="SpellNodes/Preview/VBoxContainer/Range"]
margin_top = -1.0
margin_right = 198.0
margin_bottom = 14.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Los" type="TextureRect" parent="SpellNodes/Preview/VBoxContainer/Range/HBoxContainer2"]
margin_left = 160.0
margin_right = 177.0
margin_bottom = 15.0
texture = ExtResource( 5 )

[node name="NoLos" type="TextureRect" parent="SpellNodes/Preview/VBoxContainer/Range/HBoxContainer2"]
visible = false
margin_left = 160.0
margin_right = 177.0
margin_bottom = 15.0
texture = ExtResource( 4 )

[node name="Line" type="TextureRect" parent="SpellNodes/Preview/VBoxContainer/Range/HBoxContainer2"]
margin_left = 181.0
margin_right = 198.0
margin_bottom = 15.0
texture = ExtResource( 6 )

[node name="Target" type="RichTextLabel" parent="SpellNodes/Preview/VBoxContainer"]
margin_top = 42.0
margin_right = 198.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 9 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "Single Target"
text = "Single Target"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UseLimits" type="RichTextLabel" parent="SpellNodes/Preview/VBoxContainer"]
visible = false
margin_top = 60.0
margin_right = 198.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 9 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "3 turns of cooldown"
text = "3 turns of cooldown"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="SpellNodes/Preview/VBoxContainer"]
margin_top = 60.0
margin_right = 198.0
margin_bottom = 64.0

[node name="Desc" type="RichTextLabel" parent="SpellNodes/Preview/VBoxContainer"]
margin_top = 68.0
margin_right = 198.0
margin_bottom = 83.0
rect_min_size = Vector2( 0, 15 )
rect_clip_content = false
custom_fonts/bold_font = SubResource( 15 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "Effect"
text = "Effect"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelperBox" type="VBoxContainer" parent="SpellNodes/Preview"]
margin_left = 213.0
margin_right = 422.0
margin_bottom = 65.0
rect_min_size = Vector2( 209, 0 )
mouse_filter = 2
custom_constants/separation = 5

[node name="Panel" type="Panel" parent="."]
show_behind_parent = true
margin_left = 167.0
margin_top = 3.0
margin_right = 199.0
margin_bottom = 23.0
custom_styles/panel = SubResource( 17 )

[node name="APCostIcon" type="TextureRect" parent="Panel"]
modulate = Color( 1, 1, 1, 0.862745 )
margin_left = 19.0
margin_top = 3.0
margin_right = 32.0
margin_bottom = 22.0
rect_scale = Vector2( 0.7, 0.7 )
mouse_filter = 2
texture = ExtResource( 8 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApCost" type="Label" parent="Panel"]
modulate = Color( 1, 1, 1, 0.788235 )
margin_left = 11.0
margin_top = 2.0
margin_right = 20.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 16 )
text = "1"

[node name="CooldownVisual" type="HBoxContainer" parent="."]
visible = false
margin_left = 17.0
margin_top = -7.0
margin_right = 102.0
margin_bottom = 32.0
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="CooldownIcon" type="TextureRect" parent="CooldownVisual"]
margin_right = 31.0
margin_bottom = 39.0
mouse_filter = 2
texture = ExtResource( 7 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CooldownVisual"]
margin_left = 35.0
margin_top = 10.0
margin_right = 85.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 14 )
text = "2 turns"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/press = SubResource( 13 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
align = 1

[connection signal="gui_input" from="." to="." method="gui_input"]
[connection signal="mouse_entered" from="." to="." method="mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="mouse_exited"]
[connection signal="resized" from="SpellNodes/Preview/VBoxContainer" to="." method="_on_VBoxContainer_resized"]
